# Robot-Logo-Compiler

./: .coveragerc  .gitignore  .pylintrc  JavaTemplate.java  Main.java  README.md  code_generator.py  compile.py  lexer.py  parcer.py  parser.py  pyproject.toml
.github/workflows/: Symbol_table.yml  main.yml
Documentation/: JavaTemplate.MD  analyzer.MD  code_generator.MD  compiler.MD  instructions.MD  kayttoohjeet.MD  kayttoohjeet.md  lexer.MD  parser.MD
src/: analyzer.py  binary_reorganizer.py  code_generator.py  compile.py  error_handler.py  lexer.py  logo_functions.py  logo_keywords.py  logo_parser.py  logo_parser_new.py  logo_parser_tree.py  logo_parsertree.py  parcer.py
src/tests/: old_test_analyzer.py  test_analyzer.py  test_compile.py  test_errors.py  test_generator.py  test_lexer.py  test_logo_parser.py  test_parser_tree_errors.py
templates/: JavaTemplate.java
testfiles/: additive_order_of_operations_correct_order.logo  binary_operation_edge_cases.logo  repeat_is_recognized.logo  special_character_edge_cases.logo  test1.logo  test10.logo  test11.logo  test12.logo  test13.logo  test14.logo  test2.logo  test3.logo  test4.logo  test5.logo  test6.logo  test7.logo  test8.logo  test9.logo  variable_creation_and_use.logo  variable_edge_cases_for_code_generator.logo
testfiles/failing_tests/: print_multiple_strings_PARSER_FAILS.logo  redefining_variable_type_gives_error_LEX_UNITTEST_NOT_WORKING.logo
testfiles/lexer_tests/: all_keywords_work_with_correct_inputs_ENG.logo  all_keywords_work_with_correct_inputs_FIN.logo  correct_order_of_operations.logo  (+3 more)
