[tool.poetry]
name = "robot-logo-compiler"
version = "0.1.0"
description = ""
authors = ["limi96 <mikelee199607@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
